fix(front) : add prevent possible overflow

--- a/packages/scss/src/components/comment/component.scss
+++ b/packages/scss/src/components/comment/component.scss
@@ -55,6 +55,7 @@
 
 		.comment-content-text {
 			margin-bottom: 0;
+			overflow-wrap: break-word;
 		}
 
 		.comment-content-textContainer {
